--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^3.0.1",
     "eslint-plugin-storybook": "^0.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
