--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@vitejs/plugin-react": "^3.0.1",
     "eslint-plugin-storybook": "^0.6.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
