validate register form

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-storybook": "^0.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
