--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@vitejs/plugin-react": "^3.0.1",
     "eslint-plugin-storybook": "^0.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
-    "react-router-dom": "^6.7.0"
+    "react-router-dom": "^6.7.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
