--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@vitejs/plugin-react": "^3.0.1",
     "axios": "^1.2.4",
     "eslint-plugin-storybook": "^0.6.10",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-router-dom": "^6.7.0",
+    "react-toastify": "^9.1.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
