--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@floating-ui/react": "^0.18.1",
     "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.23.0",
     "@tanstack/react-query-devtools": "^4.23.0",
     "@vitejs/plugin-react": "^3.0.1",
     "axios": "^1.2.4",
     "eslint-plugin-storybook": "^0.6.10",
+    "framer-motion": "^8.5.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
