--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.18.1",
     "@hookform/resolvers": "^2.9.10",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.23.0",
     "@tanstack/react-query-devtools": "^4.23.0",
     "@vitejs/plugin-react": "^3.0.1",
