--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^4.23.0",
     "@vitejs/plugin-react": "^3.0.1",
     "axios": "^1.2.4",
+    "classnames": "^2.3.2",
     "eslint-plugin-storybook": "^0.6.10",
     "framer-motion": "^8.5.3",
     "lodash": "^4.17.21",
