--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@floating-ui/react": "^0.18.1",
     "@hookform/resolvers": "^2.9.10",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.23.0",
     "@tanstack/react-query-devtools": "^4.23.0",
     "@vitejs/plugin-react": "^3.0.1",
     "axios": "^1.2.4",
+    "classnames": "^2.3.2",
     "eslint-plugin-storybook": "^0.6.10",
     "framer-motion": "^8.5.3",
     "lodash": "^4.17.21",
