--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.23.0",
     "@tanstack/react-query-devtools": "^4.23.0",
+    "@types/dompurify": "^2.4.0",
     "@vitejs/plugin-react": "^3.0.1",
     "axios": "^1.2.4",
     "classnames": "^2.3.2",
+    "dompurify": "^2.4.3",
     "eslint-plugin-storybook": "^0.6.10",
     "framer-motion": "^8.5.3",
     "lodash": "^4.17.21",
