--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "dompurify": "^2.4.3",
     "eslint-plugin-storybook": "^0.6.10",
     "framer-motion": "^8.5.3",
+    "i18next": "^22.4.9",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-i18next": "^12.1.5",
     "react-router-dom": "^6.7.0",
     "react-toastify": "^9.1.1",
     "yup": "^0.32.11"
@@ -52,6 +54,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "rollup-plugin-visualizer": "^5.9.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
