--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jsdom": "^20.0.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
